# codii

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: schemas.md
src/codii/: __init__.py  cli.py  server.py
src/codii/chunkers/: __init__.py  ast_chunker.py  text_chunker.py
src/codii/embedding/: __init__.py  cross_encoder.py  embedder.py
src/codii/indexers/: __init__.py  bm25_indexer.py  hybrid_search.py  query_processor.py  vector_indexer.py
src/codii/merkle/: __init__.py  tree.py
src/codii/storage/: __init__.py  database.py  snapshot.py
src/codii/tools/: __init__.py  clear_index.py  index_codebase.py  search_code.py  status.py
src/codii/utils/: __init__.py  config.py  file_utils.py
tests/: __init__.py  conftest.py
tests/test_chunkers/: __init__.py  test_all_languages.py  test_ast_chunker.py  test_text_chunker.py
tests/test_indexers/: __init__.py  test_bm25_indexer.py  test_hybrid_search.py  test_query_processor.py  test_reranker.py  test_vector_indexer.py
tests/test_integration/: test_full_workflow.py
tests/test_merkle/: __init__.py  test_tree.py
tests/test_storage/: test_database.py  test_snapshot.py
tests/test_tools/: test_clear_index.py  test_index_codebase.py  test_search_code.py  test_status.py
