[project]
name = "codii"
version = "0.1.0"
description = "Local code repository indexing MCP server with hybrid BM25 and vector search"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "sentence-transformers>=2.2.0",
    "hnswlib>=0.7.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "pathspec>=0.11.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
codii = "codii.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codii"]

[tool.hatch.build.targets.sdist]
include = ["src/codii"]